--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="me.samuki.photopapaj">
+    package="me.samuki.travel">
 
     <application
         android:allowBackup="true"
@@ -11,13 +11,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.PhotoPapaj"
+        android:theme="@style/Theme.Travel.SplashScreen"
         android:name=".TravelApplication"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.PhotoPapaj">
+            android:theme="@style/Theme.Travel.SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
